[gd_scene load_steps=5 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://mine.gd" type="Script" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 263.827

[sub_resource type="CircleShape2D" id=2]
radius = 163.257

[node name="mine" type="Area2D"]
space_override = 1
gravity_point = true
script = ExtResource( 2 )

[node name="icon" type="Sprite" parent="."]
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 1 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( -2.5199, 0 )
shape = SubResource( 1 )
disabled = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="delete_timer" type="Timer" parent="."]
one_shot = true

[node name="CPUParticles2D" type="CPUParticles2D" parent="."]
position = Vector2( 0, 2 )
emitting = false
amount = 12
lifetime = 2.0
one_shot = true
speed_scale = 2.0
explosiveness = 1.0
direction = Vector2( 0, 0 )
spread = 180.0
gravity = Vector2( 0, 0 )
initial_velocity = 100.0
initial_velocity_random = 0.43
linear_accel_random = 0.33
angle_random = 1.0
scale_amount = 10.0
anim_speed_random = 0.12

[node name="desactivador_area_dano" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="auto_explode_timer" type="Timer" parent="."]
one_shot = true
autostart = true

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="timeout" from="delete_timer" to="." method="_on_delete_timer_timeout"]
[connection signal="timeout" from="desactivador_area_dano" to="." method="_on_desactivador_area_dano_timeout"]
[connection signal="timeout" from="auto_explode_timer" to="." method="_on_auto_explode_timer_timeout"]
